[package]
name = "bevy_spicy_networking"
version = "0.5.1"
authors = ["Neikos <neikos@neikos.email>"]
edition = "2018"
description = "A spicy 🌶🌶🌶 and simple networking plugin for Bevy"
readme = "README.md"
repository = "https://github.com/CabbitStudios/bevy_spicy_networking"
license = "MIT"
categories = ["game-development", "network-programming"]
autoexamples = false
exclude =  ["assets"]
resolver = "2"

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "client"

[[example]]
name = "server"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "main", features = [], default-features = false }
bincode = "1.3.2"
crossbeam-channel = "0.5.0"
dashmap = "4.0.2"
derive_more = "0.99.13"
downcast-rs = "1.2.0"
serde = { version = "1.0.125", features = ["derive"] }
thiserror = "1.0.24"
tokio = { version = "1.4.0", features = ["net", "io-util", "sync", "rt-multi-thread"] }
typetag = "0.1.7"

[dev-dependencies]
bevy = {  git = "https://github.com/bevyengine/bevy.git", branch = "main" }
