[package]
name = "bevy_spicy_networking"
version = "0.6.1"
authors = ["Neikos <neikos@neikos.email>", "James <jamescarterbell@gmail.com>"]
edition = "2018"
description = "A spicy 🌶🌶🌶 and simple networking plugin for Bevy"
readme = "README.md"
repository = "https://github.com/CabbitStudios/bevy_spicy_networking"
license = "MIT"
categories = ["game-development", "network-programming"]
autoexamples = false
exclude =  ["assets"]
resolver = "2"

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "client"

[[example]]
name = "server"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6", features = [], default-features = false }
bincode = "1.3.2"
dashmap = "4.0.2"
derive_more = "0.99.13"
serde = { version = "1.0.133", features = ["derive"] }
thiserror = "1.0.24"
async-channel = "1.6.1"
async-trait = "0.1.52"
erased-serde = "0.3.18"

[dev-dependencies]
bevy = { version = "0.6" }
bevy_spicy_tcp = {path = "./bevy_spicy_tcp"}

[workspace]
members = [
    "bevy_spicy_tcp"
]
