[package]
name = "bevy_spicy_networking_tokio_tcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "*", features = [], default-features = false }
bevy_spicy_networking = {path = "../"}
tokio = { version = "*", features = ["net", "io-util", "sync", "rt-multi-thread"] }
bincode = "*"