[package]
name = "bevy_spicy_tcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "*", features = [], default-features = false }
bevy_spicy_networking = {path = "../"}
async-net = "1.6.1"
futures-lite = "1.12.0"
bincode = "*"